技術説明にサンプルコードを追加